# omniFPS

./: .gitignore  README.md  run.py
Mujoco/: README.md
Mujoco/pingu_mujoco_sim/: CMakeLists.txt  package.xml
assets/USD_Assets/environments/: readme.md  zero_g_lab.usd
assets/USD_Assets/robots/: FloatingPlatform.usd  FloatingPlatform_v2.usd  readme.md
cfg/: config.yaml
cfg/environment/: zeroglab.yaml
cfg/physics/: default_physics.yaml
cfg/rendering/: ray_tracing.yaml
cfg/robot/: modularfloatingplatform.yaml
control_workstation/: setup_ws.sh
control_workstation/src/random_gausian_tf/: CMakeLists.txt  package.xml
control_workstation/src/random_gausian_tf/src/: pub.cpp
docker.fpl/: Dockerfile  build.sh  entrypoint.sh  run.sh
docker.ros2_humble/: Dockerfile  build.sh  entrypoint.sh  run.sh
docker.zeroglab/: Dockerfile  build.sh  entrypoint.sh  run.sh
src/configurations/: __init__.py  physics_confs.py  rendering_confs.py  robot_confs.py
src/environments/: base_env.py  rendering.py  zeroglab.py
src/environments_wrappers/: __init__.py
src/environments_wrappers/ros2/: __init__.py  (+4 more)
src/physics/: physics_scene.py
src/robots/: robot.py  robot_manager.py
src/utils/: pxr_utils.py
zeroGLab_src/configurations/: __init__.py  environments.py  physics_confs.py  rendering_confs.py  robot_confs.py
zeroGLab_src/environments/: base_env.py  rendering.py  zeroglab.py
zeroGLab_src/environments_wrappers/: __init__.py
zeroGLab_src/physics/: physics_scene.py
zeroGLab_src/robots/: robot.py  robot_manager.py
zeroGLab_src/utils/: pxr_utils.py
(+22 files in other folders)
