<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>random_gausian_tf</name>
  <version>0.0.0</version>
  <description>The node is subscribed at the TF topic, recives ground thruth tf, adds random gausian noise and publish it on the rand_gau_tf topic </description>
  <maintainer email="ricard.marsal@uni.lu">Ricard</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
